--- a/popup.html
+++ b/popup.html
@@ -1,27 +1,56 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="UTF-8">
+  <title>Unhinged AutoCorrect</title>
   <style>
     body {
-      width: 200px;
-      padding: 10px;
-      font-family: 'Arial', sans-serif;
-      background: #1a1a1a;
-      color: #fff;
+      width: 300px;
+      padding: 16px;
+      font-family: Arial, sans-serif;
+      background-color: #1e1e1e;
+      color: white;
     }
-    .toggle-container {
+    .header {
       display: flex;
       align-items: center;
-      margin: 10px 0;
-      gap: 10px;
+      margin-bottom: 15px;
     }
-    .switch {
+    .logo {
+      width: 32px;
+      height: 32px;
+      margin-right: 10px;
+    }
+    h1 {
+      font-size: 18px;
+      margin: 0;
+      color: #ff6bff;
+    }
+    .section {
+      background-color: #2d2d2d;
+      border-radius: 8px;
+      padding: 12px;
+      margin-bottom: 15px;
+    }
+    h2 {
+      font-size: 14px;
+      margin-top: 0;
+      margin-bottom: 10px;
+      color: #ff6bff;
+    }
+    .toggle-row {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 8px;
+    }
+    .toggle {
       position: relative;
       display: inline-block;
-      width: 50px;
-      height: 24px;
+      width: 44px;
+      height: 22px;
     }
-    .switch input {
+    .toggle input {
       opacity: 0;
       width: 0;
       height: 0;
@@ -35,48 +64,134 @@
       bottom: 0;
       background-color: #ccc;
       transition: .4s;
-      border-radius: 24px;
+      border-radius: 22px;
     }
     .slider:before {
       position: absolute;
       content: "";
-      height: 16px;
-      width: 16px;
-      left: 4px;
-      bottom: 4px;
+      height: 18px;
+      width: 18px;
+      left: 3px;
+      bottom: 2px;
       background-color: white;
       transition: .4s;
       border-radius: 50%;
     }
     input:checked + .slider {
-      background-color: #9c27b0;
+      background-color: #ff6bff;
     }
     input:checked + .slider:before {
-      transform: translateX(26px);
+      transform: translateX(21px);
     }
-    h2 {
-      margin: 0;
-      font-size: 16px;
-      color: #9c27b0;
+    .emoji-slider {
+      width: 100%;
+      margin: 10px 0;
+    }
+    .slider-labels {
+      display: flex;
+      justify-content: space-between;
+      margin-top: 5px;
+      font-size: 12px;
+    }
+    .stats {
+      background-color: #2d2d2d;
+      border-radius: 8px;
+      padding: 12px;
+      font-size: 12px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+    .reset-button {
+      background-color: #ff6bff;
+      color: black;
+      border: none;
+      border-radius: 4px;
+      padding: 4px 8px;
+      cursor: pointer;
+      font-size: 11px;
+    }
+    .reset-button:hover {
+      background-color: #ff8cff;
+    }
+    input[type="range"] {
+      -webkit-appearance: none;
+      width: 100%;
+      height: 8px;
+      border-radius: 4px;
+      background: #4d4d4d;
+      outline: none;
+    }
+    input[type="range"]::-webkit-slider-thumb {
+      -webkit-appearance: none;
+      appearance: none;
+      width: 16px;
+      height: 16px;
+      border-radius: 50%;
+      background: #ff6bff;
+      cursor: pointer;
     }
   </style>
 </head>
 <body>
-  <h2>Unhinged AutoCorrect</h2>
-  <div class="toggle-container">
-    <label class="switch">
-      <input type="checkbox" id="enableToggle">
-      <span class="slider"></span>
-    </label>
-    <span>Enable Translation</span>
+  <div class="header">
+    <img src="images/skull48.png" alt="Logo" class="logo">
+    <h1>Unhinged AutoCorrect</h1>
   </div>
-  <div class="toggle-container">
-    <label class="switch">
-      <input type="checkbox" id="skullMode">
-      <span class="slider"></span>
-    </label>
-    <span>💀 Mode</span>
+  
+  <div class="section">
+    <h2>Translation Settings</h2>
+    <div class="toggle-row">
+      <span>Enable Translation</span>
+      <label class="toggle">
+        <input type="checkbox" id="enabledToggle">
+        <span class="slider"></span>
+      </label>
+    </div>
+    <div class="toggle-row">
+      <span>NSFW Mode 🔞</span>
+      <label class="toggle">
+        <input type="checkbox" id="nsfwMode">
+        <span class="slider"></span>
+      </label>
+    </div>
   </div>
+  
+  <div class="section">
+    <h2>Emoji Settings</h2>
+    <div class="toggle-row">
+      <span>💀 Mode</span>
+      <label class="toggle">
+        <input type="checkbox" id="skullMode">
+        <span class="slider"></span>
+      </label>
+    </div>
+    <div>
+      <span>Emoji Intensity: <span id="frequencyValue">30%</span></span>
+      <input type="range" min="0" max="100" value="30" class="emoji-slider" id="emojiFrequency">
+      <div class="slider-labels">
+        <span>💀</span>
+        <span>💀💀💀</span>
+      </div>
+    </div>
+  </div>
+  
+  <div class="section">
+    <h2>Image Settings</h2>
+    <div class="toggle-row">
+      <span>Replace Images</span>
+      <label class="toggle">
+        <input type="checkbox" id="replaceImages">
+        <span class="slider"></span>
+      </label>
+    </div>
+  </div>
+  
+  <div class="stats">
+    <div id="statsText">Words translated: 0 | Emojis added: 0</div>
+    <button id="resetStats" class="reset-button">Reset</button>
+  </div>
+  
   <script src="popup.js"></script>
 </body>
 </html> 
